--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "prettier": "^3.2.5"
   },
   "dependencies": {
-    "axios": "^1.7.2"
+    "axios": "^1.7.2",
+    "react-copy-to-clipboard": "^5.1.0"
   }
 }
